# TFG

./: LICENSE  README.md
Memoria/: README.md  glosario.tex  library.bib  libro.tex
Memoria/apendices/: apendice_1.tex  apendice_2.tex  apendice_3.tex
Memoria/capitulos/: capitulo_1_1.tex  capitulo_1_2.tex  capitulo_1_3.tex  capitulo_1_4.tex  capitulo_2_1.tex  capitulo_2_2.tex  capitulo_2_3.tex  capitulo_2_4.tex
Memoria/paquetes/: comandos-entornos.tex  hyperref.tex
Memoria/preliminares/: agradecimientos.tex  dedicatoria.tex  introduccion.tex  resumen.tex  summary.tex
Presentación/: presentacion.tex
Software/: .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py  graphs.gp  suppressions.txt
Software/cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
Software/examples/: CMakeLists.txt
Software/examples/src/: Benchmarks.cpp  Main.cpp  README.md
Software/include/: AKS.hpp  Basic.hpp  MillerRabin.hpp  SolovayStrassen.hpp  TFG.hpp
Software/src/: AKS.cpp  AKSCoefficient.cpp  AKSCoefficient.hpp  AKSPolynomial.cpp  AKSPolynomial.hpp  Basic.cpp  GMPWrappers.cpp  GMPWrappers.hpp  MillerRabin.cpp  SolovayStrassen.cpp
Software/tests/: CMakeLists.txt
Software/tests/src/: AKSTests.cpp
